--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <td>
                 <h1>Solntsev Bogdan</h1>
                 <p><em>Junior Web-Development</em></p>
-                <p>I'm syudent of Mining University, but I daydreaming about the IT job</p></td>
+                <p>I'm a student of Mining University, but I daydreaming about the IT job</p></td>
         </tr>
     </table>
     <hr>
